--- a/Comuni/app/src/main/AndroidManifest.xml
+++ b/Comuni/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +21,14 @@
         <activity android:name=".RegistroActivity" >
         </activity>
         <activity android:name=".Ver_eventos" >
+        </activity>
+        <activity android:name=".Detalle_evento" >
+        </activity>
+        <activity android:name=".Solicitar_evento" >
+        </activity>
+        <activity android:name=".Editar_perfil" >
+        </activity>
+        <activity android:name=".detalle_evento" >
         </activity>
     </application>
 
